[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/button_hover_gets_focused.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/pause.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/new_theme.tres" type="Theme" id=3]

[node name="Pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="BackgroundDimmer" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.67451 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.0
margin_right = 97.0
grow_horizontal = 2
rect_min_size = Vector2( 220, 0 )
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 228.0
margin_right = 220.0
margin_bottom = 261.0
text = "Resume"
script = ExtResource( 1 )

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 265.0
margin_right = 220.0
margin_bottom = 298.0
text = "Restart"
script = ExtResource( 1 )

[node name="QuitToLevelSelectionButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 302.0
margin_right = 220.0
margin_bottom = 335.0
text = "Exit to level selection"
script = ExtResource( 1 )

[node name="QuitToMainMenuButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 339.0
margin_right = 220.0
margin_bottom = 372.0
text = "Exit to main menu"
script = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 14.0
text = "Game Paused"
align = 1

[connection signal="visibility_changed" from="." to="." method="_on_Pause_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToLevelSelectionButton" to="." method="_on_QuitToLevelSelectionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToMainMenuButton" to="." method="_on_QuitToMainMenuButton_pressed"]
